add swagger info header
