# pkg/api/api.go
@@ -46,6 +46,12 @@ var routes = []func(ctrl *controller.Controller) (m, p string, h httprouter.Hand
 	GetSwaggerDoc,
 }
 
+// StartRest
+// @title Connection Log API
+// @description Provides HTTP-API to request current and historical connection log.
+// @license.name Apache-2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+// @BasePath /
 func StartRest(config configuration.Config, ctrl *controller.Controller) {
 	log.Println("start server on port: ", config.ServerPort)
 	router := httprouter.New()
